# lean-link

./: .gitignore  CLAUDE.md  CODEBUDDY.md  Cargo.toml  LICENSE  OPTIMIZATIONS.md  README.md  README_CN.md  build.rs
lean-link-macros/: Cargo.toml
lean-link-macros/src/: lib.rs
src/: errors.rs  lib.rs
src/config/: mod.rs
src/crc/: mod.rs
src/cron/: mod.rs
src/database/: camera_configs.rs  inspection_stations.rs  logs.rs  mod.rs  modbus_configs.rs  serialport_configs.rs  settings.rs  users.rs
src/database/entity/: mod.rs  prelude.rs  t_camera_configs.rs  t_defect_details.rs  t_geometry_measurements.rs  t_inspection_details.rs  t_inspection_records.rs  t_inspection_stations.rs  t_inspection_statistics.rs  t_logs.rs  t_modbus_configs.rs  t_serialport_configs.rs  t_settings.rs  t_station_rois.rs  t_users.rs
src/database/migrator/: m20250814_000001_create_tables.rs  m20260121_000001_modify_t_logs.rs  m20260412_000001_create_tables.rs  m20260412_000002_create_tables.rs  m20260412_000003_create_tables.rs  m20260412_000004_create_tables.rs  m20260412_000005_create_tables.rs  mod.rs
src/ffi/: mod.rs
src/service/: error.rs  errors.rs  mod.rs
src/service/camera/: imv_camera.rs  manager.rs  mod.rs  rest.rs  rest_api.rs  stream.rs  ws_handler.rs
src/service/camera/inner/: imv_camera.rs  mod.rs
src/service/inspection/: config.rs  detector.rs  image.rs  manager.rs  mod.rs  station.rs  yolo.rs
src/service/modbus/: inner.rs  mod.rs
src/service/mqtt/: client.rs  mod.rs
src/service/serialport/: group.rs  holder.rs  inner.rs  mod.rs  port.rs
src/service/socket/: mod.rs
src/service/web/: mod.rs
src/service/web/middleware/jwt/: builder.rs  inner.rs  middleware.rs  mod.rs
src/service/web/service/: camera.rs  default.rs  log.rs  mod.rs  modbus.rs  serialport.rs  user.rs
src/service/web/service/inspection/: mod.rs  station.rs
src/service/websocket/: mod.rs  protocol.rs
src/storage/: mod.rs
src/utils/: bcd.rs  datetime.rs  file.rs  i2c.rs  mod.rs
tests/: yolo.rs
