[workspace]
members = [".", "lean-link-macros"]

[package]
name = "lean-link"
version = "0.1.0"
authors = ["Rocky Tsui <rocky@lsfinfo.com>"]
edition = "2024"
description = ""
license = "MIT OR Apache-2.0"
categories = []
keywords = []
rust-version = "1.89"
build = "build.rs"

[lib]
name = "lean_link"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1", features = ["std", "serde", "v4", "v7"] }
actix-web = { version = "4", optional = true }
tracing-actix-web = { version = "*", optional = true }
async-trait = "0.1.88"
bcrypt = "0.17.0"
bytes = "1"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3.31"
lean-link-macros = { path = "./lean-link-macros" }
rumqttc = { version = "0.24.0", optional = true }
sea-orm = { version = "1", features = ["default", "runtime-tokio", "debug-print"] }
sea-orm-migration = { version = "1" }
serde = { version = "1", features = ["default", "derive"] }
serde_json = "1"
serialport = { version = "4", features = ["serde"], optional = true }
smallvec = "*"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "*", optional = true }
tokio-retry2 = { version = "0.5.7", features = ["jitter", "tracing"] }
tokio-serial = { version = "5", optional = true }
tokio-stream = "*"
tokio-tungstenite = { version = "0.27.0", optional = true }
tokio-util = { version = "*", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jsonwebtoken = { version = "9", optional = true }
directories = "6.0.0"
winapi = { version = "0.3.9", features = ["winnt", "fileapi"] }
serde_yaml = "0.9"
normpath = "1.3.0"
actix-utils = { version = "3.0.1", optional = true }
anyhow = "1.0.99"
rand = "0.9.2"
regex = "1.11.2"
tsink = "0.3.1"
crc = "3.3.0"
tokio-cron-scheduler = "0.14.0"
actix-cors = "0.7.1"
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
dashmap = { version = "6.1.0", features = ["serde"] }

[dev-dependencies]

[build-dependencies]
bindgen = "0.72.1"

[features]
default = ["web", "sqlite"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
web = ["actix-web", "tracing-actix-web", "jsonwebtoken", "tokio-tungstenite", "actix-utils", "sea-orm/runtime-actix"]
serialport = ["tokio-serial", "dep:serialport"]
mqtt = ["rumqttc"]
modbus = ["tokio-modbus", "serialport"]
socket = ["tokio-tungstenite"]
imv-camera = []
all = ["sqlite", "mysql", "postgres", "web", "serialport", "mqtt", "modbus", "socket", "imv-camera"]

