[workspace]
members = [".", "lean-link-macros"]

[package]
name = "lean-link"
version = "0.1.0"
authors = ["Rocky Tsui <rocky@lsfinfo.com>"]
edition = "2024"
description = ""
license = "MIT OR Apache-2.0"
categories = []
keywords = []
rust-version = "1.89"
build = "build.rs"

[lib]
name = "lean_link"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.19.0", features = ["std", "serde", "v4", "v7"] }
actix-web = { version = "4.12.1", optional = true }
tracing-actix-web = { version = "0.7.20", optional = true }
async-trait = "0.1.88"
bcrypt = "0.17.0"
bytes = "1.11.0"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
lean-link-macros = { path = "./lean-link-macros" }
rumqttc = { version = "0.25.1", optional = true }
sea-orm = { version = "1.1.19", features = ["default", "runtime-tokio", "debug-print"] }
sea-orm-migration = { version = "1.1.19" }
serde = { version = "1.0.228", features = ["default", "derive"] }
serde_json = "1.0.145"
serialport = { version = "4.8.1", features = ["serde"], optional = true }
smallvec = "1.15.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-modbus = { version = "0.17.0", optional = true }
tokio-retry2 = { version = "0.7.0", features = ["jitter", "tracing"] }
tokio-serial = { version = "5", optional = true }
tokio-stream = "*"
tokio-tungstenite = { version = "0.28.0", optional = true }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"], optional = true }
directories = "6.0.0"
winapi = { version = "0.3.9", features = ["winnt", "fileapi"] }
serde_yaml = "0.9.34-deprecated"
normpath = "1.5.0"
actix-utils = { version = "3.0.1", optional = true }
anyhow = "1.0.100"
rand = "0.9.2"
regex = "1.12.2"
tsink = "0.4.2"
crc = "3.4.0"
tokio-cron-scheduler = "0.15.1"
actix-cors = "0.7.1"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
dashmap = { version = "6.1.0", features = ["serde"] }
rust_xlsxwriter = "0.92.2"
hex = "0.4.3"

[dev-dependencies]

[build-dependencies]
cmake = "0.1.57"
bindgen = "0.72.1"

[features]
default = []
# 数据库选择其中一个
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]

web = ["actix-web", "tracing-actix-web", "jsonwebtoken", "tokio-tungstenite", "actix-utils", "sea-orm/runtime-actix"]
serialport = ["tokio-serial", "dep:serialport"]
mqtt = ["rumqttc"]
modbus = ["tokio-modbus", "serialport"]
socket = ["tokio-tungstenite"]
imv-camera = []
all = ["postgres", "web", "serialport", "mqtt", "modbus", "socket", "imv-camera"]

